<resources>
    <string name="app_name">ArceShopping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_API">Productos</string>
    //login

    <string name="title_login">Iniciar sesión</string>
    <string name="email_login_hint">Correo</string>
    <string name="password_login_hint">Contraseña</string>
    <string name="iniciar_sesion_login_hint">Iniciar sesión</string>
    <string name="register_text_login">¿No tienes una cuenta?</string>
    <string name="register_link_login">Registrate</string>
    <string name="forgot_password_link_login">¿Olvidaste tu contraseña?</string>
    <string name="button_biometric">Huella</string>

    //register
    <string name="title_register">Registro</string>
    <string name="Id_register">ID</string>
    <string name="complete_name_register">Nombre completo</string>
    <string name="email_register">Correo</string>
    <string name="age_register">Edad</string>
    <string name="province_register">Provincia</string>
    <string name="button_register">Registrase</string>

    //password
    <string name="title_password">Cambio de contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="button_password">Cambiar contraseña</string>
    <string name="image_description">Logo</string>

    //account settings
    <string name="title_account">Ajustes de cuenta</string>
    <string name="user_pic">Foto</string>
    <string name="update">Actualizar mis datos</string>
    <string name="change_pic">Cambiar foto de perfil</string>
    <string name="change_age">Cambiar edad</string>
    <string name="logout">Cerrar sesión</string>

    //products
    <string name="user_title_products">Cuenta</string>
    <string name="store_title_products">Tienda</string>
    <string name="cart_title_products">Carrito</string>
    <string name="no_implemented_products">Disponible próximamente</string>

    //forgotPassword
    <string name="title_forgot_password">Contraseña olvidada</string>
    <string name="hint_email_forgot_password">Introduzca su correo electrónico</string>
    <string name="button_forgot_password">Cambiar contraseña</string>

    //dialog
    <string name="button_dialog">Enviar código</string>
    <string name="code_hint_dialog">Ingrese el código aquí</string>

    //singleProduct
    <string name="single_product_plus">+</string>
    <string name="single_product_minus">-</string>
    <string name="single_product_to_cart">Añadir al carrito</string>

    //shoppingCart
    <string name="shopping_cart">Carrito de Compras</string>
    <string name="shopping_history">Historial de Compras</string>
    <string name="total">TOTAL:</string>
    <string name="pay_button">Pagar</string>
    <string name="cancel_button">Limpiar</string>
    <string name="empty_cart">¡El carrito de compras se encuentra vacío!</string>

    //Purchase history
    <string name="purchase_history_title">Historial de compras</string>
    <string name="index">#</string>
    <string name="date">Fecha</string>
    <string name="purchase_total">Total</string>
    <string name="purchase_number">Compra #</string>
    <string name="share_button">Compartir en mis redes</string>
</resources>