<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.AccountFragment"
    android:layout_marginBottom="70dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/user_data"
    >

    <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id = "@+id/account_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_account"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintBottom_toTopOf="@id/user_pic"/>

    <ImageView
        android:id="@+id/user_pic"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/user_pic"
        android:src="@drawable/generic_user_icon"
        app:layout_constraintStart_toStartOf="@id/account_title"
        app:layout_constraintTop_toBottomOf="@id/account_title" />

    <Button
        android:id = "@+id/change_pic_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_pic"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/user_pic"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/complete_name_register"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/change_pic_button"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id = "@+id/til_name"
        android:layout_width="313dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginStart="40dp"
        android:layout_marginEnd = "40dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true"
              />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/id_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Id_register"
        android:textSize="15sp"
        android:layout_marginStart="20dp"

        app:layout_constraintTop_toBottomOf="@id/til_name"
        />

    <TextView
        android:id = "@+id/tv_id"
        android:layout_width="313dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_number"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginStart="40dp"
        android:layout_marginEnd = "40dp"
        />




    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/email_register"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        />

    <TextView
        android:id = "@+id/tv_email"
        android:layout_width="313dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginStart="40dp"
        android:layout_marginEnd = "40dp"
        />


    <TextView
        android:id="@+id/province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/province_register"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id = "@+id/til_province"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/province"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd = "40dp"
        >

        <Spinner
            android:id="@+id/account_province_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/age_register"
        android:textSize="15sp"
        android:layout_marginStart="20dp"

        app:layout_constraintTop_toBottomOf="@id/til_province"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id = "@+id/til_age"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd = "40dp"
        app:layout_constraintTop_toBottomOf="@id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.497">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_input_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:singleLine="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/til_age"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/change_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_password"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            />

        <Button
            android:id="@+id/save_changes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>