<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurchaseDetailActivity">

    <LinearLayout
        android:layout_marginTop="60dp"
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/purchase_meta">
        <ImageView
            android:id="@+id/user_pic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/generic_user_icon"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="zombi"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:textSize="30sp"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/purchase_meta"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/user_info"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start">
        <TextView
            android:id="@+id/purchase_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:text="@string/purchase_number"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:layout_marginStart="100dp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/purchase_meta"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintHeight_max="220dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_total"
        android:textSize="20sp"
        android:id="@+id/total"
        app:layout_constraintTop_toBottomOf="@id/shopping_cart"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:paddingStart="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/shopping_cart"
        android:gravity="center"
        android:layout_marginTop="150dp">
    <Button
        android:backgroundTint="@color/arce_orange"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/total"
        android:text="@string/share_button"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>